--- a/grid_v1/grid.tex
+++ b/grid_v1/grid.tex
@@ -198,18 +198,25 @@ A
 \section{2 flavor quark meson model}
 \label{sec:QM}
 
-The effective action of the quark-meson model reads
+The effective action of the 2 flavor quark-meson model reads
 \begin{align}
 	\Gamma_k [\Phi]&=\int_x\{Z_{q,k} \bar q (\gamma_\mu \partial_\mu-\gamma_0 \mu)q +\frac{1}{2} Z_{\phi,k}(\partial_\mu \phi)^2 \nonumber\\[2ex]
 	&+ k_k \bar q (T^0 \sigma +i \gamma_5 T \cdot \pi )q +V_k(\rho) - c \sigma \} \label{}
 \end{align}
-$\rho=\frac{1}{2}\phi^2$
+where $\rho=\frac{1}{2}\phi^2$ is chirally invariant variable
+
+The dimensionless meson and quark masses are obtained by
 \begin{align}
 	\bar m_\pi&=\frac{V_k'(\rho)}{k^2 Z_{\phi,k}} \\[2ex]
 	\bar m_\sigma&= \frac{V_k'(\rho)+2 \rho V_k''(\rho)} {k^2 Z_{\phi,k}}\\[2ex]
 	\bar m_q&=\frac{h_k^2 \rho}{2 k^2 Z_{q,k}^2}
 \end{align}
+
 with the Wetterich equation
+\begin{align}
+	\partial_t \Gamma_k [\Phi] = \frac{1}{2}\Tr G_{\phi \phi} [\Phi]  \partial_t R^\phi_k-\Tr G_{q \bar q}[\Phi] \partial_t R^q_k
+\end{align}
+the regulator
 
 \begin{align}
 	\partial_t V_k(\rho) &=\frac{k^4}{4 \pi^2} \{ ( N_f^2-1)l_0^B(m_{\pi,k},\eta_{\phi,k} ; T)\nonumber\\[2ex]
@@ -246,7 +253,7 @@ In this work, we have studied
 
 \begin{acknowledgments}
 
-We thank the members of the fQCD collaboration \cite{fQCD} for work on related projects. The work was supported by the National Natural Science Foundation of China under Contracts Nos. 11775041.
+The work was supported by the National Natural Science Foundation of China under Contracts Nos. 11775041.
 
 \end{acknowledgments}
 
