--- a/grid_v1/ref.bib
+++ b/grid_v1/ref.bib
@@ -29,6 +29,22 @@
       SLACcitation   = "%%CITATION = HEP-PH/0007098;%%"
 }
 
+@article{Fu:2015naa,
+      author         = "Fu, Wei-jie and Pawlowski, Jan M.",
+      title          = "{Relevance of matter and glue dynamics for baryon number
+                        fluctuations}",
+      journal        = "Phys. Rev.",
+      volume         = "D92",
+      year           = "2015",
+      number         = "11",
+      pages          = "116006",
+      doi            = "10.1103/PhysRevD.92.116006",
+      eprint         = "1508.06504",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1508.06504;%%"
+}
+
 @article{Mitter:2013fxa,
       author         = "Mitter, Mario and Schaefer, Bernd-Jochen",
       title          = "{Fluctuations and the axial anomaly with three quark
@@ -57,4 +73,14 @@
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = NUCL-TH/0403039;%%"
+}
+
+@article{Yin:2019ebz,
+      author         = "Yin, Shi and Wen, Rui and Fu, Wei-jie",
+      title          = "{Mesonic dynamics and QCD phase transition}",
+      year           = "2019",
+      eprint         = "1907.10262",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1907.10262;%%"
 }
