--- a/grid_v1/grid.tex
+++ b/grid_v1/grid.tex
@@ -198,25 +198,26 @@ A
 \section{2 flavor quark meson model}
 \label{sec:QM}
 
-The effective action of the 2 flavor quark-meson model reads
+The effective action of the 2 flavor quark-meson model reads \cite{Fu:2015naa}
 \begin{align}
-	\Gamma_k [\Phi]&=\int_x\{Z_{q,k} \bar q (\gamma_\mu \partial_\mu-\gamma_0 \mu)q +\frac{1}{2} Z_{\phi,k}(\partial_\mu \phi)^2 \nonumber\\[2ex]
-	&+ k_k \bar q (T^0 \sigma +i \gamma_5 T \cdot \pi )q +V_k(\rho) - c \sigma \} \label{}
+	\Gamma_k [\Phi]&=\int_x\{Z_{q,k} \bar q (\gamma_\mu \partial_\mu-\gamma_0 \mu)q +\frac{1}{2} Z_{\phi,k}(\partial_\mu \phi)^2  \nonumber\\[2ex]
+	&+ h_k \bar q (T^0 \sigma +i \gamma_5\vec{T} \cdot \vec{\pi} )q +V_k(\rho) - c \sigma \} \label{eq:effective action}
 \end{align}
-where $\rho=\frac{1}{2}\phi^2$ is chirally invariant variable
+with the integral $\int_x=\int_0^{1/T}d_{x_0}\int d^3 x$. $T$ and $\mu$ denote the temperature and quark chemical potential,  respectively. The meson/quark wave function $Z_{\phi,k}/Z_{q,k}$ are scale and field dependent. Moreover, in this work we ignore the  longitudinal  and transversal  splitting of $Z_k$, i.e., $Z_k^\parallel $ and $Z_k^\perp$,  respectively, and an interesting discussion is presented in Ref. \cite{Yin:2019ebz}. $T^0$ and $\vec{T}$ are generators of $SU (N_f=2)$ with $\Tr(T^iT^j)=\frac{1}{2} \delta^{ij}$ and $T^0=\frac{1}{\sqrt{N_f}} \mathbb{1}_{N_f \times N_f}$. Quark and meson interaction is encoded in Yukawa coupling $h_k$ in \Eq{eq:effective action}. The effective potential $V_k(\rho)$ is scale and field dependent and chirally invariant with chirally invariant variable $\rho=\frac{1}{2}\phi^2$. The linear sigma term $- c \sigma$ explicitly breaks the chiral symmetry.
 
-The dimensionless meson and quark masses are obtained by
+Then with the Wetterich equation
+\begin{align}
+	\partial_t \Gamma_k [\Phi] = \frac{1}{2}\Tr G_{\phi \phi} [\Phi]  \partial_t R^\phi_k-\Tr G_{q \bar q}[\Phi] \partial_t R^q_k
+\end{align}
+with the regulators
+
+The renormalized dimensionless meson and quark masses are obtained by
 \begin{align}
 	\bar m_\pi&=\frac{V_k'(\rho)}{k^2 Z_{\phi,k}} \\[2ex]
 	\bar m_\sigma&= \frac{V_k'(\rho)+2 \rho V_k''(\rho)} {k^2 Z_{\phi,k}}\\[2ex]
 	\bar m_q&=\frac{h_k^2 \rho}{2 k^2 Z_{q,k}^2}
 \end{align}
 
-with the Wetterich equation
-\begin{align}
-	\partial_t \Gamma_k [\Phi] = \frac{1}{2}\Tr G_{\phi \phi} [\Phi]  \partial_t R^\phi_k-\Tr G_{q \bar q}[\Phi] \partial_t R^q_k
-\end{align}
-the regulator
 
 \begin{align}
 	\partial_t V_k(\rho) &=\frac{k^4}{4 \pi^2} \{ ( N_f^2-1)l_0^B(m_{\pi,k},\eta_{\phi,k} ; T)\nonumber\\[2ex]
@@ -262,7 +263,7 @@ The work was supported by the National Natural Science Foundation of China under
 
 
 
-\bibliography{ref-lib.bib}% Produces the bibliography via BibTeX.
+\bibliography{ref.bib}% Produces the bibliography via BibTeX.
 
 \end{document}
 %
