--- a/grid_v1/ref.bib
+++ b/grid_v1/ref.bib
@@ -349,6 +349,17 @@
       SLACcitation   = "%%CITATION = ARXIV:1809.01594;%%"
 }
 
+@article{Grossi:2019urj,
+      author         = "Grossi, Eduardo and Wink, Nicolas",
+      title          = "{Resolving phase transitions with Discontinuous Galerkin
+                        methods}",
+      year           = "2019",
+      eprint         = "1903.09503",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:1903.09503;%%"
+}
+
 @article{Helmboldt:2014iya,
       author         = "Helmboldt, Alexander J. and Pawlowski, Jan M. and
                         Strodthoff, Nils",
@@ -395,6 +406,36 @@
       archivePrefix  = "arXiv",
       primaryClass   = "hep-lat",
       SLACcitation   = "%%CITATION = ARXIV:1307.5958;%%"
+}
+
+@article{Litim:2000ci,
+      author         = "Litim, Daniel F.",
+      title          = "{Optimization of the exact renormalization group}",
+      journal        = "Phys. Lett.",
+      volume         = "B486",
+      year           = "2000",
+      pages          = "92-99",
+      doi            = "10.1016/S0370-2693(00)00748-6",
+      eprint         = "hep-th/0005245",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      reportNumber   = "HD-THEP-00-28",
+      SLACcitation   = "%%CITATION = HEP-TH/0005245;%%"
+}
+
+@article{Litim:2001up,
+      author         = "Litim, Daniel F.",
+      title          = "{Optimized renormalization group flows}",
+      journal        = "Phys. Rev.",
+      volume         = "D64",
+      year           = "2001",
+      pages          = "105007",
+      doi            = "10.1103/PhysRevD.64.105007",
+      eprint         = "hep-th/0103195",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      reportNumber   = "CERN-TH-2001-084",
+      SLACcitation   = "%%CITATION = HEP-TH/0103195;%%"
 }
 
 @article{Luo:2017faz,
