--- a/grid_v1/grid.tex
+++ b/grid_v1/grid.tex
@@ -193,6 +193,7 @@ prd,
 
 A
 
+Recently, in Ref. \cite{Grossi:2019urj},they resolve phase transitions with Discontinuous Galerkin methods at local  potential  approximation (LPA) truncation. However, Discontinuous Galerkin methods
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{2 flavor quark meson model}
@@ -211,36 +212,54 @@ We introduce the renormalized field and renormalized coupling parameters
 \end{align}
 And the field dependent renormalized dimensionless meson and quark masses are obtained by
 \begin{align}
-	\bar m_\pi&=\frac{V_k'(\rho)}{k^2 Z_{\phi,k}} \\[2ex]
-	\bar m_\sigma&= \frac{V_k'(\rho)+2 \rho V_k''(\rho)} {k^2 Z_{\phi,k}}\\[2ex]
-	\bar m_q&=\frac{h_k^2 \rho}{2 k^2 Z_{q,k}^2}\label{eq:mass}
+	\bar m_\pi^2&=\frac{V_k'(\rho)}{k^2 Z_{\phi,k}} \\[2ex]
+	\bar m_\sigma^2&= \frac{V_k'(\rho)+2 \rho V_k''(\rho)} {k^2 Z_{\phi,k}}\\[2ex]
+	\bar m_q^2&=\frac{h_k^2 \rho}{2 k^2 Z_{q,k}^2}\label{eq:mass}
 \end{align}
-the masses given above are curvature masses which distinguish from the pole and screening masses \cite{Herbst:2013ufa,Alkofer:2018guy}..
-
+the masses given above are curvature masses which distinguish from the pole and screening masses \cite{Herbst:2013ufa,Alkofer:2018guy}.
+the anomalous dimensions
+\begin{align}
+\eta_{\phi/q,k}=-\frac{\partial_t Z_{\phi/q,k}}{Z_{\phi/q,k}}
+\end{align}
 The QM model at various truncations have been investigated in Ref. \cite{Pawlowski:2014zaa,Fu:2015naa,Fu:2015amv,Rennecke:2016tkm,Yin:2019ebz}. However, all of these investigation are based on Taylor expansion technology which only consider field dependent at the neighborhood of vacuum expectation value $\phi_0$, while the full field dependent is not included. In \cite{Pawlowski:2014zaa}, they show a good match of chiral phase diagram between Taylor expansion solution and  grid solution within LPA truncations at low chemical potential. However, the Taylor expansion technology disables to resolve the problem at high chemical potential and low temperature.
 
-Due to the Matsubara
- 
+Notable that $Z_{\phi/q,k}$ should also be momentum depended. Due to the Matsubara
+The local  potential  approximation (LPA) truncation:
+\begin{align}
+\partial_t Z_{\phi/q,k}=0, \quad \partial_t h=0
+\end{align}
+
+\begin{align}
+\partial_t Z_{\phi,k}=0,\quad \partial_t Z_{q,k}=0, \quad \partial_t \bar h=0
+\end{align}
+
 Then with the Wetterich equation
 \begin{align}
 	\partial_t \Gamma_k [\Phi] = \frac{1}{2}\Tr G_{\phi \phi} [\Phi]  \partial_t R^\phi_k-\Tr G_{q \bar q}[\Phi] \partial_t R^q_k
 \end{align}
-with the regulators $R^\phi_k,R^q_k$ are defined in Eq{...}
+with the regulators $R^\phi_k,R^q_k$ are defined in \Eq{eq:regulators}
 
 \begin{align}
 	\partial_t V_k(\rho) &=\frac{k^4}{4 \pi^2} \{ ( N_f^2-1)l_0^B(m_{\pi,k},\eta_{\phi,k} ; T)\nonumber\\[2ex]
 	&+l_0^B(m_{\sigma,k},\eta_{\phi,k}; T) \nonumber\\[2ex]
-	&-4N_c N_f l_0^F(m_{q,k},\eta_{q,k};T,\mu)\}
+	&-4N_c N_f l_0^F(m_{q,k},\eta_{q,k};T,\mu)\}\label{eq:flow_V}
 \end{align}
-here $l_0^{B/F}$ are threshold functions which are defined in \ref{app:threshold_fun}
+here $l_0^{B/F}$ are threshold functions which are defined in Eq. (\ref{eq:lB0},\ref{eq:lF0})
 
 \begin{align}
-	\eta_{\phi,k}&=\frac{1}{6\pi^2} \Big\{ \frac{4}{k^2} \rho (V_k'(\rho))^2
+	\eta_{\phi,k}=&\frac{1}{6\pi^2} \Big\{ \frac{4}{k^2} \rho (V_k'(\rho))^2  \mathcal{BB}_{(2,2)}(\bar m_{\pi,k}^2,\bar m_{\sigma,k}^2;T)\nonumber\\[2ex]
+	&+N_c \bar h_k^2[(2 \eta_{q,k}-3)  \mathcal{F}_{(2)}(\bar m_{q,k}^2;T,\mu)\nonumber\\[2ex]
+	&-4(\eta_{q,k}-2)\ \mathcal{F}_{(3)}(\bar m_{q,k}^2;T,\mu)] \Big\}\label{eq:flow_eta}
 \end{align}
+where $\mathcal{BB}_{(n,m)}$ and $\mathcal{F}_{(n)}$ are the threshold functions which are defined in Eq. \ref{eq:thr_Fn}\ref{eq:thr_BnBm})
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Results}
 \label{sec:Results}
+
+In this work,we employ the grid on method to solve the flow equation Eq. (\ref{eq:flow_V} ,\ref{eq:flow_eta}).
+The UV cutoff is chosen as $\Lambda=500\mathrm{MeV}$, and the initial condiction
+The numerical
 
 \subsection{phase diagram at chiral limit}
 
@@ -266,14 +285,66 @@ The work was supported by the National Natural Science Foundation of China under
 
 \section{Threshold Functions}
 \label{app:threshold_fun}
+
+In this work, we employ 3d Litim regulators $R^\phi_k,R^q_k$\cite{Litim:2000ci,Litim:2001up} for analytic and concise expressions of the threshold functions, which are defined as
 \begin{align}
-	l_0^B(\bar m_{\phi,k}^2,\eta_{\phi,k}) &=\frac{2}{3}\frac{1}{\sqrt{1+\bar m_{\phi,k}^2}} \Big ( 1-\frac{\eta_{\phi,k}}{5}\Big) \nonumber\\[2ex] 
-	&\Big( \frac{1}{2}+n_B(\bar m_{\phi,k}^2,T) \Big)  \\[2ex]
-	l_0^F(\bar m_{q,k}^2,\eta_{q,k})&=\frac{1}{3} \frac{1}{\sqrt{1+\bar m_{q,k}^2}} \Big(1-\frac{\eta_{q,k}}{4}\Big) \nonumber\\[2ex]
-	&\Big(1-n_F(E-\mu)-n_F(E+\mu))
+	R^\phi_k(q_0,\vec{q})&=Z_{\phi,k} \vec{q}^2 r_B\Big(\frac{\vec{q}^2}{k^2}\Big)\nonumber \\[2ex]
+	R^q_k(q_0,\vec{q})&=Z_{q,k} i \vec{\gamma} \cdot \vec{q} r_{F}\Big(\frac{\vec{q}^2}{k^2}\Big)\label{eq:regulators}
+\end{align}
+with shape functions
+\begin{align}
+	r_B(x)&=\Big(\frac{1}{x}-1\Big)\Theta(1-x)\nonumber \\[2ex]
+	r_F(x)&=\Big(\frac{1}{\sqrt{x}}-1\Big)\Theta(1-x)
 \end{align}
 
+With the regulators defined above, the scalar parts of the dimensionless propagators are
+\begin{align}
+	G_\phi(q,\bar{m}_{\phi,k}^2)&=\frac{1}{q_0^2/k^2+1+\bar{m}_{\phi,k}^2}\nonumber \\[2ex]
+	G_q(q,\bar{m}_{q,k}^2)&=\frac{1}{(q_0+i \mu)^2/k^2+1+\bar{m}_{q,k}^2}\label{eq:propagators}
+\end{align}
+where the temperature is introduced via the Matsubara frequency $q_0=2 \pi n T$ and $q_0=2 \pi (n+1)T$ for bosons and fermmions, respectively.
 
+The bosonic and fermionic loops are easily obtained as
+\begin{align}
+	l_0^B(\bar m_{\phi,k}^2,\eta_{\phi,k};T)&=\frac{2}{3}\frac{1}{\sqrt{1+\bar m_{\phi,k}^2}} \Big ( 1-\frac{\eta_{\phi,k}}{5}\Big) \nonumber\\[2ex]
+	&\Big( \frac{1}{2}+n_B(\bar m_{\phi,k}^2;T) \Big)\label{eq:lB0}
+\end{align}
+and
+\begin{align}
+	l_0^F(\bar m_{q,k}^2,\eta_{q,k};T,\mu)&=\frac{1}{3} \frac{1}{\sqrt{1+\bar m_{q,k}^2}} \Big(1-\frac{\eta_{q,k}}{4}\Big) \nonumber\\[2ex]
+	&\Big(1-n_F(\bar{m}_{q,k}^2;T,\mu)-n_F(\bar{m}_{q,k}^2;T,-\mu)\Big)\label{eq:lF0}
+\end{align}
+here $n_B$ and  $n_F$ are  bosonic and fermionic distribution functions
+\begin{align}
+	n_B(\bar m_{\phi,k}^2;T)&=\frac{1}{\exp\Big\{\frac{k}{T}(1+\bar m_{\phi,k}^2)^{1/2}\Big\}-1}\nonumber\\[2ex]
+	n_F(\bar{m}_{q,k}^2;T,\mu)&=\frac{1}{\exp\Big\{\frac{1}{T}[k(1+\bar{m}_{q,k}^2)^{1/2}-\mu]\Big\}+1}
+\end{align}
+
+To calculate the meson anomalous dimension \Eq{eq:flow_eta}, we also need the fermionic threshold functions $\mathcal{F}_{(n)}(\bar{m}_{q,k}^2;T,\mu)$ and  two bosonic threshold functions $\mathcal{BB}_{(n,m)}(\bar m_{a,k}^2,\bar m_{b,k}^2;T)$. these are defined as follows:
+\begin{align}
+	&\mathcal{F}_{(1)}(\bar{m}_{q,k}^2;T,\mu)=\frac{T}{k}\sum_{n_q} G( q, \bar{m}_{q,k}^2) \nonumber\\[2ex] 
+	&=\frac{1}{2 \sqrt{1+\bar{m}_{q,k}^2}}\Big(1-n_F(\bar{m}_{q,k}^2;T,\mu)-n_F(\bar{m}_{q,k}^2;T,-\mu)\Big)\label{eq:thr_F1}
+\end{align}
+with
+\begin{align}
+	&\mathcal{F}_{(n)}(\bar{m}_{q,k}^2;T,\mu)=\frac{(-1)^{n-1}}{(n-1)!}\frac{\partial^{n-1}\mathcal{F}_{(1)}(\bar{m}_{q,k}^2;T,\mu)}{\partial(\bar{m}_{q,k}^2)^{n-1}}\label{eq:thr_Fn}.
+\end{align}
+And the Matsubara summation of two meson propagators
+\begin{align}
+	&\mathcal{BB}_{(1,1)}(\bar m_{a,k}^2,\bar m_{b,k}^2;T)=\frac{T}{k}\sum_{nq} G_\phi(q,\bar m_{a,k}^2) G_\phi(q,\bar m_{b,k}^2)\nonumber\\[2ex]
+	&=\frac{1}{(\bar m_{b,k}^2-\bar m_{a,k}^2)\sqrt{1+\bar m_{a,k}^2}}\Big(\frac{1}{2}+n_B(\bar m_{a,k}^2;T)\Big)\nonumber\\[2ex]
+	&\;\;+\frac{1}{(\bar m_{a,k}^2-\bar m_{b,k}^2)\sqrt{1+\bar m_{b,k}^2}}\Big(\frac{1}{2}+n_B(\bar m_{b,k}^2;T)\Big)\label{eq:thr_B1B1a}
+\end{align}
+Obviously, if $\bar m_{a,k}^2=\bar m_{b,k}^2$, the defination above will diverges to infinity. In this case, we  define the threshold function as
+\begin{align}
+	\mathcal{BB}_{(1,1)}&(\bar m_{a,k}^2,\bar m_{a,k}^2;T)=\nonumber\\[2ex]
+	&-\frac{\partial}{\partial \bar m_{a,k}^2}\Big[\frac{1}{\sqrt{1+\bar m_{a,k}^2}}\Big(\frac{1}{2}+n_B(\bar m_{a,k}^2;T)\Big)\Big]\label{eq:thr_B1B1b}
+\end{align}
+with
+\begin{align}
+	\mathcal{BB}_{(n,m)}&(\bar m_{a,k}^2,\bar m_{b,k}^2;T)=\frac{(-1)^{n+m-2}}{(n-1)!(m-1)!}\nonumber\\[2ex]
+	&\frac{\partial^{n+m-2} \mathcal{BB}_{(1,1)}(\bar m_{a,k}^2,\bar m_{b,k}^2;T)}{\partial(\bar m_{a,k}^2)^{n-1} \partial(\bar m_{b,k}^2)^{m-1}}\label{eq:thr_BnBm}
+\end{align}
 \bibliography{ref.bib}% Produces the bibliography via BibTeX.
 
 \end{document}
